[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CynanBotCommon"
version = "0.0.1"
authors = [
  { name="charlesmadere", email="" },
]
description = "CynanBotCommon library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/charlesmadere/CynanBotCommon"
Issues = "https://github.com/charlesmadere/CynanBotCommon/issues"
